add mandelbulb extension

--- a/fractals.ipynb
+++ b/fractals.ipynb
@@ -249,6 +249,60 @@
     "anim = FuncAnimation(fig, mandelbrot_zoom, frames = tqdm(range(nframes + 1), position = 0), blit = False)\n",
     "anim.save('outputs/mandelbrot.gif', writer = 'pillow', fps = 15, dpi = 300)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mandelbulb\n",
+    "A 3D extension of the Mandelbrot set, where the iterative function now looks more like $z \\rightarrow z^n + c$, where $z$ is approximated as a \"triplex\" number instead of a complex number. Useful references for reproducing this work are from Daniel White on [Skytopia](https://www.skytopia.com/project/fractal/mandelbulb.html) and Daniel Shiffman's \"The Coding Train\" [episode](https://www.youtube.com/watch?v=NJCiUVGiNyA)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# >>> Mandelbulb extension\n",
+    "\n",
+    "# Compute the Mandelbulb first\n",
+    "v = np.linspace(-1, 1, 128)\n",
+    "x, y, z = ft.mandelbulb(v, v, v, n = 16, max_iter = 20, threshold = 2)\n",
+    "\n",
+    "# Create a 3D figure first\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(projection='3d')\n",
+    "\n",
+    "# Formatting\n",
+    "fig.set_facecolor('black')\n",
+    "ax.set_facecolor('black')\n",
+    "ax.w_xaxis.set_pane_color((0.0, 0.0, 0.0, 0.0))\n",
+    "ax.w_yaxis.set_pane_color((0.0, 0.0, 0.0, 0.0))\n",
+    "ax.w_zaxis.set_pane_color((0.0, 0.0, 0.0, 0.0))\n",
+    "ax.grid(False)\n",
+    "ax.set_xlim(-1, 1)\n",
+    "ax.set_ylim(-1, 1)\n",
+    "ax.set_zlim(np.min(z), np.max(z))\n",
+    "\n",
+    "# Plot points\n",
+    "ax.scatter(x, y, z, color = 'white', s = 0.1)\n",
+    "\n",
+    "# Animation settings\n",
+    "nframes = 359 # should be odd to accommodate elevs\n",
+    "azims = np.linspace(0, 360, nframes)\n",
+    "angles = np.linspace(-45, 45, int(np.ceil(nframes/2)))\n",
+    "elevs = np.concatenate((angles, np.flip(angles[:-1])))\n",
+    "\n",
+    "# Define a frame update function that rotates\n",
+    "def bulb_rotation(frame):\n",
+    "    ax.view_init(elev = elevs[frame], azim = azims[frame])\n",
+    "    return\n",
+    "\n",
+    "# Save the animation as a gif\n",
+    "anim = FuncAnimation(fig, bulb_rotation, frames = tqdm(range(nframes), position = 0), blit = False)\n",
+    "anim.save('outputs/mandelbulb.gif', writer = 'pillow', fps = 30, dpi = 300)"
+   ]
   }
  ],
  "metadata": {
